# wasm-frontend-example

./: Cargo.toml  index.html  style.css
src/: main.rs
