[package]
name = "screen-retro"
version = "0.1.0"
edition = "2024"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
gloo = "0.8"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "ImageData",
  "Window",
  "Document",
  "Element",
  "HtmlElement",
]
